# cargo-disk-vac

./: README.md  pyproject.toml
src/cargo_disk_vac/: __init__.py  __main__.py  app.py  app.tcss  scanner.py
